--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nl.openfortress.android6bed4"
     android:versionCode="4"
-    android:versionName="0.4" >
+    android:versionName="0.4.2" >
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="15" />
     
    <uses-permission android:name="android.permission.INTERNET" />
-   
-    <application
+   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />    
+
+   <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -29,6 +30,16 @@
              <action android:name="android.net.VpnService"/>
              </intent-filter>
        </service>
+       
+		<receiver android:name=".EventListener"
+        	android:enabled="true"
+        	android:exported="true"
+        	android:label="BootReceiver">
+        	<intent-filter>
+            	<action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            	<!-- The other intent CONNECTIVITY_ACTION is received after registration, so it only happens while the tunnel is active -->
+        	</intent-filter>
+    	</receiver>
        
    </application>
 
