--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nl.openfortress.android6bed4"
     android:versionCode="5"
-    android:versionName="0.5" >
+    android:versionName="0.5.2" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -14,6 +14,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name=".Android6bed4"
             android:label="@string/title_activity_main" >
@@ -31,16 +32,16 @@
              </intent-filter>
        </service>
        
-		<receiver android:name=".EventListener"
+		<receiver android:name=".EventMonitor"
         	android:enabled="true"
         	android:exported="true"
         	android:label="BootReceiver">
         	<intent-filter>
-            	<action android:name="android.intent.action.BOOT_COMPLETED"></action>
-            	<!-- The other intent CONNECTIVITY_ACTION is received after registration, so it only happens while the tunnel is active -->
+            	<action android:name="android.intent.action.BOOT_COMPLETED" />
+            	<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
         	</intent-filter>
     	</receiver>
-       
+    	       
    </application>
 
 </manifest>
